k8s/production/explorer-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: explorer-api
  name: explorer-api
  namespace: chicmoz-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: explorer-api
  strategy: {}
  template:
    metadata:
      labels:
        app: explorer-api
    spec:
      containers:
        - image: registry.digitalocean.com/aztlan-containers/explorer-api:latest
          resources:
            limits:
              memory: 4096Mi
              cpu: 350m
          ports:
            - name: http-app
              containerPort: 80
              protocol: TCP
          name: explorer-api
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10
status: {}
