k8s/production/explorer-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: explorer-api
  namespace: chicmoz
spec:
  selector:
    app: explorer-api
  ports:
    - name: http-app
      protocol: TCP
      port: 80
      targetPort: http-app
