k8s/production/explorer-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-explorer-api
  namespace: chicmoz-prod
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/auth-url: http://auth.chicmoz-prod.svc.cluster.local
    nginx.ingress.kubernetes.io/auth-response-headers: x-api-key
    kubernetes.io/ingress.class: "nginx" # TODO: probably not needed
    cert-manager.io/cluster-issuer: "chicmoz-issuer-production"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.chicmoz.info
      secretName: chicmoz-api-tls
  rules:
    - host: api.chicmoz.info # TODO: change to env-var "DOMAIN"
      http:
        paths:
          - path: /v1/([^/]+)/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: explorer-api
                port:
                  name: http-app
status:
  loadBalancer: {}
